broke small parts of readme to add to index

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,4 +25,5 @@ dynamic = ["version", "description"]
 [project.optional-dependencies]
 doc = [
     "sphinx~=5.0.1",
+    "pydata-sphinx-theme",
 ]
