some workaround for tox build

--- a/tox.ini
+++ b/tox.ini
@@ -62,8 +62,8 @@ usedevelop = true
 deps =
     -r{toxinidir}/docs/requirements.txt
 commands =
-    sphinx-build {posargs:-E} -b html docs dist/docs
-    sphinx-build -b linkcheck docs dist/docs
+    sphinx-build {posargs:-E} -b html docs/source dist/docs/build
+    sphinx-build -b linkcheck docs/source dist/docs/build
 
 [testenv:codecov]
 deps =
