fixed a bug in readme

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ url= http:fedsim.xyz
 author = Farshid Varno
 author_email = fr.varno@gmail.com
 license= Apache-2.0,
-license_file = LICENSE
+license_files = LICENSE
 # readme = README.rst
 platforms = any
 classifiers=[
