remove app word from coverage report

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -88,6 +88,6 @@ jobs:
       - name: Install dependencies
         run: pip install -e .[test]
       - name: Run tests and collect coverage
-        run: pytest --cov app
+        run: pytest --cov
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
