fix some import problems, docs got OK

--- a/tox.ini
+++ b/tox.ini
@@ -57,14 +57,13 @@ commands =
     flake8
     isort --verbose --check-only --diff --filter-files .
 
-; TODO: see why the following fails!
-; [testenv:docs]
-; usedevelop = true
-; deps =
-;     -r{toxinidir}/docs/requirements.txt
-; commands =
-;     sphinx-build {posargs:-E} -b html docs/source dist/docs/build
-;     sphinx-build -b linkcheck docs/source dist/docs/build
+[testenv:docs]
+usedevelop = true
+deps =
+    -r{toxinidir}/docs/requirements.txt
+commands =
+    sphinx-build {posargs:-E} -b html docs/source dist/docs/build
+    sphinx-build -b linkcheck docs/source dist/docs/build
 
 [testenv:codecov]
 deps =
