--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,6 +4,7 @@ sphinx:
   configuration: docs/source/conf.py
 formats: all
 python:
+  version: 3.9
   install:
     - requirements: docs/requirements.txt
     - method: pip
