changed ownership from fedsim-dev to varnio

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,9 +38,9 @@ classifiers=[
     ]
 
 project_urls =
-    Bug Tracker = https://github.com/fedsim-dev/fedism/issues
+    Bug Tracker = https://github.com/varnio/fedism/issues
     Documentation = https://fedsim.readthedocs.io
-    Source Code = https://github.com/fedsim-dev/fedsim
+    Source Code = https://github.com/varnio/fedsim
 
 
 [options]
