--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,5 +1,5 @@
 name: build
-on: 
+on:
   push:
     branches:
       - main
@@ -34,12 +34,12 @@ jobs:
             python_arch: 'x64'
             tox_env: 'py39'
             os: 'windows-latest'
-          - name: 'py39 (macos)'
-            python: '3.9'
-            toxpython: 'python3.9'
-            python_arch: 'x64'
-            tox_env: 'py39'
-            os: 'macos-latest'
+          # - name: 'py39 (macos)'
+          #   python: '3.9'
+          #   toxpython: 'python3.9'
+          #   python_arch: 'x64'
+          #   tox_env: 'py39'
+          #   os: 'macos-latest'
           - name: 'py310 (ubuntu)'
             python: '3.10'
             toxpython: 'python3.10'
@@ -52,12 +52,12 @@ jobs:
             python_arch: 'x64'
             tox_env: 'py310'
             os: 'windows-latest'
-          - name: 'py310 (macos)'
-            python: '3.10'
-            toxpython: 'python3.10'
-            python_arch: 'x64'
-            tox_env: 'py310'
-            os: 'macos-latest'
+          # - name: 'py310 (macos)'
+          #   python: '3.10'
+          #   toxpython: 'python3.10'
+          #   python_arch: 'x64'
+          #   tox_env: 'py310'
+          #   os: 'macos-latest'
     steps:
     - uses: actions/checkout@v2
       with:
