change logger to logall

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ install_requires =
     torchvision
     tensorboard
     pyyaml
+    logall
 
 python_requires = >=3.8
 include_package_data = True
