improved doc build automation

--- a/tox.ini
+++ b/tox.ini
@@ -57,6 +57,7 @@ usedevelop = true
 deps =
     -r{toxinidir}/docs/requirements.txt
 commands =
+    # TODO: use all in make instead of html as target
     sphinx-build {posargs:-E} -b html docs/source dist/docs/build
     sphinx-build -b linkcheck docs/source dist/docs/build
 
