change entry to fesim-cli, also partially for #33

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,8 +61,8 @@ include_package_data = True
 zip_safe = False
 
 [options.entry_points]
-fedsim =
-    fedsim = scripts.simulate:main
+fedsim-cli =
+    fedsim = scripts.fedsim_cli:main
 
 [options.extras_require]
 test =
