--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,7 @@ skip_install = true
 commands =
     python setup.py check --strict --metadata --restructuredtext
     check-manifest {toxinidir}
-    flake8
+    flake8 --ignore=W504,E226,E704,E123,W503,E121,E24,E126,E203
     isort --verbose --check-only --diff --filter-files .
 
 [testenv:docs]
