remove unnecessary main fn from cli

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ install_requires =
     numpy
     click
     sklearn
+    scikit-optimize
     tqdm
     torch
     torchvision
@@ -61,8 +62,8 @@ include_package_data = True
 zip_safe = False
 
 [options.entry_points]
-fedsim-cli =
-    fedsim = scripts.fedsim_cli:main
+console_scripts =
+    fedsim-cli = scripts.fedsim_cli:cli
 
 [options.extras_require]
 test =
