fix a few minor bugs

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = fedsim
 description = Generic Federated Learning Simulator
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-url= http:fedsim.xyz
+url= http://fedsim.varnio.com
 author = Farshid Varno
 author_email = fr.varno@gmail.com
 license= Apache-2.0,
