--- a/setup.cfg
+++ b/setup.cfg
@@ -63,7 +63,7 @@ zip_safe = False
 
 [options.entry_points]
 console_scripts =
-    fedsim-cli = scripts.fedsim_cli:cli
+    fedsim-cli = fedsim_cli.fedsim_cli:cli
 
 [options.extras_require]
 test =
@@ -75,7 +75,7 @@ inplace = True
 
 
 [options.packages.find]
-include = fedism, scripts, fedism.*, scripts.*
+include = fedism, fedsim_cli, fedism.*, fedsim_cli.*
 
 
 
