--- a/tbump.toml
+++ b/tbump.toml
@@ -2,7 +2,7 @@ github_url = "https://github.com/fvarno/fedsim/"
 
 [version]
 current = "0.6.2"
-regex = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)'
+regex = "(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)"
 
 [git]
 message_template = "Bump to {new_version}"
